2011-10-31 16:36  paddockd

	* [r301] sources/libogg-1.2.0.tar.bz2,
	  sources/libvorbis-1.2.3.tar.bz2, sources/libvorbis-1.3.1.tar.bz2,
	  sources/portaudio-r1541.tar.gz, sources/portaudio-r1738.tar.gz:
	  Deleted obsolete library sources.

2011-10-31 16:33  paddockd

	* [r300] contrib/makefile.freebsd-sparc64,
	  contrib/makefile.linux24-ffmpeg-alsa-display,
	  contrib/makefile.linux26-armel-alsa,
	  contrib/makefile.linux26-armel-oss,
	  contrib/makefile.linux26-ffmpeg-alsa-display,
	  contrib/makefile.linux26-mipsel-oss,
	  contrib/makefile.linux26-nofpu-alsa-display,
	  contrib/makefile.linux26-ppc-alsa-display,
	  contrib/makefile.mingw32-ffmpeg-display,
	  contrib/makefile.mingw32-pa-display,
	  deprecated/makefile.mingw32-asio-display,
	  deprecated/makefile.mingw32-display,
	  deprecated/makefile.mingw32-wasapi-display,
	  makefile.linux22-empeg, makefile.linux24-alsa-display,
	  makefile.linux24-display, makefile.linux26-alsa-display,
	  makefile.linux26-display, makefile.linux26-i64-alsa-display,
	  makefile.osx-i64-display, makefile.osx-intel-display,
	  makefile.osx-ppc-display, makefile.sol10-intel-display,
	  makefile.sol10-sparc64-display, makefile.sol9-sparc-display,
	  makefile.windows-display, sources/libogg-1.2.2.tar.bz2,
	  sources/libvorbis-1.3.2.tar.bz2, src/squeezeslave/squeezeslave.c:
	  Upgraded libogg to 1.2.2.
	  Upgraded libvorbis to 1.3.2.
	  Downgraded makefile.linux26-nofpu-alsa-display and
	  makefile.linux22-empeg to libogg 1.1.4 as 1.2.0 causes issues
	  with the tremor fixed point vorbis decoder.
	  Increased revision to 300.

2011-10-27 22:52  paddockd

	* [r299] ChangeLog, makefile.sol10-intel-display,
	  makefile.sol10-sparc64-display, makefile.sol9-sparc-display,
	  src/squeezeslave/squeezeslave.c: Fixed WEXITSTATUS redefinition
	  in lirc for Solaris builds.
	  Increased revision to 299.

2011-10-27 22:48  paddockd

	* [r298] ChangeLog, scripts/buildall-lnx26-armel: Updated